# testease

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
app/: .gitignore  DESIGN.md  Dockerfile  README.md
app/api/: README.md  pyproject.toml
app/api/qa_review_api/: __init__.py  app.py  explorer.py  issue.py  local_runs.py  runs.py  settings.py
app/api/tests/: conftest.py  test_api.py  test_capabilities_api.py  test_config_api.py  test_explorer.py  test_issue.py  test_local_runs.py  test_log_stream.py  test_questions_api.py  test_runs.py  test_site_model_api.py  test_targets_api.py
app/e2e/: README.md  package-lock.json  package.json  playwright.config.ts
app/e2e/tests/: activation-toggle.spec.ts  app-shell.spec.ts  discovered.spec.ts  fixtures.ts  inline-screenshots.spec.ts  mcp-attribution.spec.ts  mcp-selection.spec.ts  mcp-tools.spec.ts  persona-count-honesty.spec.ts  persona-credentials.spec.ts  persona-library.spec.ts  personas-bulk-activate.spec.ts  run-from-persona.spec.ts  theme-toggle.spec.ts  timeline-filters.spec.ts  timeline-ux.spec.ts  triage-per-persona.spec.ts  triage-regression-badge.spec.ts  triage-view.spec.ts  trigger-flow.spec.ts  url-spine.spec.ts
app/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/web/src/: App.vue  api.js  api.test.js  avatars.js  avatars.test.js  format.js  format.test.js  router.js  style.css
app/web/src/components/: ActionChip.test.js  ActionChip.vue  Avatar.test.js  Avatar.vue  CapabilityCard.test.js  CapabilityCard.vue  FindingCounts.test.js  FindingCounts.vue  HelpTip.test.js  HelpTip.vue  PersonaForm.test.js  PersonaForm.vue  PersonaTranscript.vue  RegressionBadge.test.js  RegressionBadge.vue
app/web/src/lib/: apiError.js  apiError.test.js
app/web/src/views/: Admin.test.js  Admin.vue  Discovered.test.js  Discovered.vue  MCPTools.vue  NewRun.test.js  NewRun.vue  PersonaDetail.vue  Personas.vue  RunDetail.vue  RunsList.vue  Settings.test.js  Settings.vue  SiteModel.test.js  SiteModel.vue  SiteTarget.test.js  SiteTarget.vue
app/web/tests/: setup.js
docs/: CAPABILITIES.md  ROADMAP.md
harness/: .gitignore  Dockerfile  README.md  pyproject.toml
harness/qa_agents/: __init__.py  __main__.py  accounting.py  config.py  credentials.py  discord.py  fair_use_override.py  mcp_catalog.py  migrate_site_model.py  orchestrator.py  personas.py  report.py  run_recorder.py  runner.py  setup_actions.py  site_knowledge.py  target_mcp.py
harness/qa_agents/fixtures/attachments/: README.md  generate.py  sample-expenses.csv  sample-figures.xlsx
harness/qa_agents/tools/: EMAIL.md  __init__.py  cost.py  email.py  findings.py  identity.py  loadgen.py  openai_billing.py  openapi.py
harness/tests/: test_accounting.py  test_atlas_sink.py  test_by_design_injection.py  test_config.py  test_cost_tool.py  test_credentials.py  test_discord.py  test_email_tools.py  test_fair_use_override.py  test_findings_live_writer.py  test_format_tool_args.py  test_identity.py  test_loadgen_tool.py  test_main.py  test_mcp_catalog.py  test_openai_billing_tool.py  test_openapi_tools.py  test_orchestrator.py  test_personas.py  test_report.py  test_run_recorder.py  test_runner.py  test_runner_mcp_gating.py  test_setup_actions.py  test_target_mcp.py
store/: README.md  pyproject.toml
store/fixtures/: example.yaml  slyreply.yaml
store/qa_store/: __init__.py  app_config.py  capabilities.py  coverage_catalog.py  crypto.py  distillation.py  embeddings.py  fixtures.py  init_vector_indexes.py  schema.py  screenshots.py  seed_personas.py  site_model.py  site_model_migration.py  site_questions.py  site_reconciler.py  site_retriever.py  vault.py  wipe.py
store/tests/: test_admin_audit_and_diagnostics.py  test_app_config.py  test_capabilities.py  test_coverage_catalog.py  test_cross_run_dedup.py  test_crypto.py  test_discovered.py  test_finding_dedup.py  test_fixtures.py  test_persona_credentials.py  test_personas.py  test_run_logs.py  test_scenarios.py  test_schema.py  test_screenshots.py  test_site_embeddings.py  test_site_model.py  test_site_model_migration.py  test_site_questions.py  test_site_reconciler.py  test_site_retriever.py  test_vault.py  test_vector_indexes.py
