[project]
name = "qa-agents"
version = "0.1.0"
description = "Persona QA agents for SlyReply — autonomous Claude agents that play fictional users, walk every flow, and write human-sounding reviews."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    # #872 — Anthropic direct SDK for the post-run memory distillation
    # Haiku call. claude-agent-sdk only exposes the streaming agent loop;
    # a single-shot summarisation call is naturally `messages.create()`
    # against the bare client. Pinned to a version that ships
    # claude-haiku-4-5 support (>=0.42).
    "anthropic>=0.42",
    "httpx>=0.27",
    # Used only by qa_agents.fair_use_override (a harness utility) to set a
    # sandbox user's fair-use cooldown directly. The agent loop never touches
    # MongoDB. Imported lazily so tests can run without a Mongo install.
    "pymongo>=4.6",
    # The shared slyreply_qa store — the AtlasReportSink writes through it.
    # Local path dependency; CI / the Dockerfile install it alongside.
    "qa-store",
    # #1023 — Faker for the identity MCP server (qa_agents/tools/identity.py).
    # Faker is a pure-Python lib with no external services, so unlike the other
    # MCP slices in epic #1019 there's no env-var / credential requirement.
    "faker>=30.0",
    # #1384 — json-repair fallback for the post-run memory distillation pass.
    # The report model (Opus 4.7) occasionally emits JSON with a trailing
    # comma, unescaped quote inside a URL/body excerpt, or fenced stragglers
    # — especially on API-shaped persona transcripts where every URL path
    # and quoted error message is a tripwire. Pure-Python lib, no native
    # deps; only invoked on json.loads failure, never on the happy path.
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mongomock>=4.1",
]

[tool.uv.sources]
qa-store = { path = "../store" }

[project.scripts]
qa-agents = "qa_agents.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qa_agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# #1009 — persona-id rename blew test lines past 100 chars. Tests stay
# readable; production code still capped.
"tests/**/*.py" = ["E501"]
